[project]
name = "conversational-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "panel>=1.7.2",
    "param>=2.2.1",
    "python-dotenv>=1.1.1",
    "wikipedia>=1.4.0",
]
